[project]
name = "openclaw-video-sidecar"
version = "0.1.0"
description = "Dify sidecar bridge for OpenClaw video analysis"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "httpx>=0.28,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "jsonschema>=4.23,<5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

